2010-03-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Remove spurious `extern'.

	* rcsbase.h (isSLASH): Remove `extern' on func decl.

2010-03-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move "keyword subtitution mode" into `struct behavior'.

	Here, "U" means "Throughout, use `BE (kws)'".
	* rcsbase.h (Expand): Delete var decl.
	(behavior): Add `kws' to this struct.
	* ci.c: U.
	* co.c: U.
	* rcs.c: U.
	* rcsclean.c: U.
	* rcsdiff.c: U.
	* rcsedit.c: U.
	* rcsfcmp.c: U.
	* rcsfnms.c: U.
	* rcsgen.c: U.
	* rcsmerge.c: U.
	* rcssyn.c: U.
	(Expand): Delete var.
	* rlog.c: U.

2010-03-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move "effective RCS version" into `struct behavior'.

	Here, "U" means "Throughout, use `BE (version)'".
	* rcsbase.h (RCSversion): Delete var decl.
	(behavior): Add `version' to this struct.
	* rcs.c: U.
	* rcsedit.c: U.
	* rcsfcmp.c: U.
	* rcsgen.c: U.
	* rcstime.c: U.
	* rcsutil.c: U.
	(RCSversion): Delete var.
	* rlog.c: U.

2010-03-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Use `MANI (filename)' and `MANI (standard_output)'.

	Here, "U" means "Throughout, use `MANI (filename)'
	and `MANI (standard_output)' instead of singular variable names.
	* rcsbase.h (workname, workstdout): Delete #define:s.
	* ci.c: U.
	* co.c: U.
	* rcs.c: U.
	* rcsclean.c: U.
	* rcsdiff.c: U.
	* rcsedit.c: U.
	* rcsfnms.c: U.
	* rcskeep.c: U.
	* rcslex.c: U.
	* rcsmerge.c: U.
	* rlog.c: U.

2010-03-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Consolidate RCS file state into `struct repository'.

	Here, "U" means "Throughout, use `REPO (foo)' and
	`ADMIN (foo)' instead of the old singular variable names".
	* rcsbase.h (repository): New struct.
	(repository): New `struct repository' decl.
	(REPO, ADMIN): New macros.
	(RCSname, fdlock, RCSstat, Dbranch, AccessList, Symbols, Comment)
	(Ignored, Locks, Head, TotalDeltas): Delete var decls.
	* ci.c: U.
	* co.c: U.
	* rcs.c: U.
	* rcsclean.c: U.
	* rcsdiff.c: U.
	* rcsedit.c: U.
	* rcsfcmp.c: U.